src/test/deca/context/valid/class/field/from_other_class.deca
// Description:
//    Déclaration d'un champ de type d'une autre classe
//
// Resultats:
//    Aucune erreur
// 
// Historique:
//    cree le 01/01/2016

class A {

}

class C {
	A a = new A();
}

{

}
